--- a/Gighub/Content/Site.css
+++ b/Gighub/Content/Site.css
@@ -24,6 +24,12 @@ textarea {
     max-width: 280px;
 }
 
+span.field-validation-error {
+  color: red;
+  font-weight: bold;
+}
+
+
 /* Bootstrap Overrides*/
 
 .navbar-inverse {
@@ -63,12 +69,13 @@ body {
 .form-control{
     font-size:17px;
 }
+
 .form-control:focus {
   border-color:#2196F3;
   box-shadow:none;
   -webkit-box-shadow:none;
-
 }
+
 
 .btn {
   font-size: 17px;
